--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="js/balles.js"></script>
   <script src="js/collisions.js"></script>
   <script src="js/ecouteurs.js"></script>
+  <script src="js/howler.min.js"></script> 
 </head>
 <body>
     <canvas id="myCanvas" width=600
